# scc

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt
cast/: Cargo.toml
cast/src/: ast.rs  ast_binder.rs  ast_printer.rs  ast_to_sir.rs  ast_types.rs  ast_vistors.rs  lib.rs  parser.rs
cast/tests/: binder_tests.rs  parser_tests.rs  tests_filecheck.rs
cast/tests/binder/: c_operators.c
cast/tests/lower_to_sir/: c_operators.c
cast/tests/parser/: c_operators.c  fail_invalid_type.c  return_statement.c  var_decls.c
cast/tests/runner/: c_operators.c
diagnostics/: Cargo.toml
diagnostics/src/: diagnostics.rs  lib.rs  result.rs
iostreams/: Cargo.toml
iostreams/src/: lib.rs  location.rs  output_source_stream.rs  source_stream.rs  source_streams_set.rs
parse/: Cargo.toml
parse/src/: lexer.rs  parser.rs
scc/: Cargo.toml
scc-runner/: Cargo.toml
scc-runner/src/: main.rs
scc/src/: main.rs
scclib/: Cargo.toml
scclib/src/: lib.rs  scc_compiler.rs
sir-opt/: Cargo.toml
sir-opt/src/: main.rs
sir-runner/: Cargo.toml
sir-runner/src/: main.rs
sir_backend/: Cargo.toml
sir_backend/src/: backend_ops.rs  custom_ir.rs  instruction_selection_pass.rs  ir_verifiers.rs  lib.rs  register.rs
sir_backend_arm_v86a/: Cargo.toml
sir_backend_arm_v86a/descs/: patterns.json  registers.json
sir_backend_arm_v86a/src/: armv86a_ops.rs  backend_desc.rs  isel_patterns.rs  lib.rs
sir_backend_arm_v86a/tests/: tests_filecheck.rs
sir_backend_arm_v86a/tests/instruction_selection/: basic_add_regs.sir  basic_add_stack.sir
sir_core/: Cargo.toml
sir_core/src/: arith_ops.rs  attributes.rs  block.rs  canonicalize_pass.rs  compiler_setup.rs  context_globals.rs  cse_pass.rs  ir_builder.rs  ir_context.rs  ir_data.rs  ir_parser.rs  ir_printer.rs  ir_rewriter.rs  ir_transforms.rs  ir_verifier.rs  ir_visitor.rs  lib.rs  op_interfaces.rs  op_tags.rs  operation.rs  operation_type.rs  pass_manager.rs  sir_opt_runner.rs  symbol_table.rs  type_converter.rs  types.rs  value.rs
sir_core/tests/: code_test_ops.rs  test_add_verifier.sir  test_ops.rs  tests_sir.rs
sir_core/tests/test_ops/: mod.rs
sir_func/: Cargo.toml
sir_func/src/: func_ops.rs  func_transforms.rs  lib.rs
sir_func/tests/: test_function_verifier.sir  tests_filecheck.rs
sir_func/tests/conversion/: func_to_lir.sir
sir_interpreter/: Cargo.toml
sir_interpreter/src/: interfaces.rs  interpreter.rs  lib.rs  mem_emulator.rs  transforms.rs
sir_lir/: Cargo.toml
sir_lir/src/: lib.rs  lir_ops.rs
sir_lir/tests/: tests_filecheck.rs
sir_lir/tests/ops/: alloca_verifier.sir  iadd_verifier.sir  load_verifier.sir  store_verifier.sir
sir_lir/tests/runner/: elementwise.sir  mem_ops.sir
sir_lir/tests/transforms/: fold_elementwise.sir
sir_low_level/: Cargo.toml
sir_low_level/src/: interfaces.rs  legalize_pass.rs  lib.rs  low_level_types.rs  tags.rs
sir_math/: Cargo.toml
sir_math/src/: lib.rs  math_ops.rs  math_transforms.rs
sir_math/tests/: test_constant_verifier.sir  test_iadd_i32.sir  test_iadd_verifier.sir  tests_filecheck.rs
sir_math/tests/conversion/: elemwise_to_lir.sir
sir_math/tests/transforms/: canonicalize_iadd.sir
sir_mem/: Cargo.toml
sir_mem/src/: lib.rs  mem_ops.rs  mem_transforms.rs
sir_mem/tests/: tests_filecheck.rs
sir_mem/tests/conversion/: legalize_to_lir.sir
sir_mem/tests/verifiers/: alloca.sir  load.sir  store.sir
sir_opt/: Cargo.toml
sir_opt/src/: lib.rs  sir_opt_runner.rs
sir_pipelines/: Cargo.toml
sir_pipelines/src/: lib.rs  register.rs  sir_to_lir.rs
sir_pipelines/tests/: tests_filecheck.rs
sir_pipelines/tests/sir_to_lir/: add_i32_stack.sir  add_si32.sir
sir_runner/: Cargo.toml
sir_runner/src/: lib.rs  runner.rs  runner_test.rs
sir_test_ops/: Cargo.toml
sir_test_ops/src/: lib.rs  test_ops.rs
sir_test_ops/tests/: code_test_ops.rs  test_cse.sir  test_fun_verifier.sir  test_ops.sir  tests_filecheck.rs
sir_transform/: Cargo.toml
sir_transform/src/: canonicalize_pass.rs  context_registry.rs  cse_pass.rs  dag_transformer.rs  ir_rewriter.rs  ir_transforms.rs  lib.rs  pass.rs  pass_manager.rs  register.rs  sir_backend.rs  sir_backend_descriptor.rs  sir_registers_descriptor.rs  transforms_registry.rs  type_converter.rs  unknown_backend_desc.rs
tests/: out.s  test_add.c  test_add_cst_si32.sir  test_add_csts_i32.sir  test_add_si32.sir  test_armv8_add_vreg.sir  test_basic_add.c  test_basic_add_lir.sir  test_interpret_iadd.sir
utils/: Cargo.toml
utils/src/: argparse.rs  bitmanip_utils.rs  lib.rs  scoped_map.rs  stdout_writer.rs  stringutils.rs  trie.rs  uuid.rs
xgen/: run.py  sir_defs.py  xgenlibs.py
xtest/: Cargo.toml
xtest/src/: lib.rs  outputcheck.rs  test_driver.rs  test_file.rs
