[workspace]

members = [
    "cast",
    "diagnostics",
    "iostreams",
    "scc",
    "scclib",
    "scc-runner",
    "sir_core",
    "sir_func",
    "sir_interpreter",
    "sir_lir",
    "sir_low_level",
    "sir_math",
    "sir_mem",
    "sir-opt",
    "sir_pipelines",
    "sir_runner",
    "sir-runner",
    "parse",
    "utils",
    "xtest",
]
