[workspace]

members = [
    "cast",
    "diagnostics",
    "iostreams",
    "scc",
    "scclib",
    "scc-runner",
    "sir_backend",
    "sir_backend_arm_v86a",
    "sir_core",
    "sir_func",
    "sir_interpreter",
    "sir_lir",
    "sir_low_level",
    "sir_math",
    "sir_mem",
    "sir_opt",
    "sir-opt",
    "sir_pipelines",
    "sir_runner",
    "sir-runner",
    "sir_test_ops",
    "sir_transform",
    "parse",
    "utils",
    "xtest",
]
