[package]
name = "cast"
version = "0.1.0"
edition = "2021"

[dependencies]
global_counter = "0.2.2"
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
sir_core = { path = "../sir_core" }
sir_func = { path = "../sir_func" }
sir_math = { path = "../sir_math" }
sir_mem = { path = "../sir_mem" }
parse = { path = "../parse" }
utils = { path = "../utils" }
xtest = { path = "../xtest" }

[dev-dependencies]
sir_core = { path = "../sir_core" }
sir_runner = { path = "../sir_runner" }
scclib = { path = "../scclib" }