[package]
name = "sir_backend_arm_v86a"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
parse = { path = "../parse" }
sir_backend = { path = "../sir_backend" }
sir_core = { path = "../sir_core" }
sir_transform = { path = "../sir_transform" }
sir_func = { path = "../sir_func" }
sir_lir = { path = "../sir_lir" }
utils = { path = "../utils" }

[dev-dependencies]
sir_opt = { path = "../sir_opt" }
xtest = { path = "../xtest" }