[package]
name = "sir_func"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
parse = { path = "../parse" }
sir_core = { path = "../sir_core" }
sir_low_level = { path = "../sir_low_level" }

[dev-dependencies]
xtest = { path = "../xtest" }