[package]
name = "sir_func"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
parse = { path = "../parse" }
sir_core = { path = "../sir_core" }
sir_interpreter = { path = "../sir_interpreter" }
sir_low_level = { path = "../sir_low_level" }
sir_transform = { path = "../sir_transform" }

[dev-dependencies]
sir_opt = { path = "../sir_opt" }
xtest = { path = "../xtest" }