[package]
name = "sir_math"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
parse = { path = "../parse" }
sir_low_level = { path = "../sir_low_level" }
sir_core = { path = "../sir_core" }
sir_lir = { path = "../sir_lir" }

[dev-dependencies]
sir_func = { path = "../sir_func" }
xtest = { path = "../xtest" }

