[package]
name = "sir_mem"
version = "0.1.0"
edition = "2021"

[dependencies]
sir_core = { path = "../sir_core" }
sir_lir = { path = "../sir_lir" }
sir_low_level = { path = "../sir_low_level" }
diagnostics = { path = "../diagnostics" }
parse = { path = "../parse" }

[dev-dependencies]
sir_func = { path = "../sir_func" }
xtest = { path = "../xtest" }