[package]
name = "sir_opt"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
sir_backend = { path = "../sir_backend" }
sir_core = { path = "../sir_core" }
sir_transform = { path = "../sir_transform" }
utils = { path = "../utils" }