[package]
name = "sir_pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
sir_core = { path = "../sir_core" }
sir_func = { path = "../sir_func" }
sir_interpreter = { path = "../sir_interpreter" }
sir_lir = { path = "../sir_lir" }
sir_low_level = { path = "../sir_low_level" }
sir_math = { path = "../sir_math" }
sir_mem = { path = "../sir_mem" }

[dev-dependencies]
xtest = { path = "../xtest" }
