[package]
name = "sir_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
iostreams = { path = "../iostreams" }
sir_core = { path = "../sir_core" }
sir_interpreter = { path = "../sir_interpreter" }
utils = { path = "../utils" }
xtest = { path = "../xtest" }